Closed Bug 1076906 Opened 11 years ago Closed 10 years ago

Fix license headers for some WebRTC files, and provide LICENSE file

Categories

(Core :: WebRTC, defect, P2)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: gerv, Assigned: gerv)

Details

Attachments

(1 file, 1 obsolete file)

The following files: media/webrtc/signaling/src/media-conduit/VideoTypes.h media/webrtc/signaling/src/media-conduit/WebrtcGmpVideoCodec.h have both an MPLed header and a WebRTC project header. That seems unnecessary. If the code came from the WebRTC project and we've modified it, we should put our modifications under the WebRTC license. Also, those two files and this file: media/webrtc/signaling/signaling.gyp all say: * Use of this source code is governed by a BSD-style license * that can be found in the LICENSE file in the root of the source * tree. However, there is no such file in media/webrtc/signaling or media/webrtc. We should provide one containing the WebRTC BSD license from here: http://www.webrtc.org/license-rights/license Gerv
Assignee: nobody → rjesup
:jesup: ping? Gerv
Rank: 26
Priority: -- → P2
Attached patch Patch v.1 (obsolete) — Splinter Review
Assignee: rjesup → gerv
Status: NEW → ASSIGNED
Attachment #8602749 - Flags: review?(rjesup)
Comment on attachment 8602749 [details] [diff] [review] Patch v.1 Review of attachment 8602749 [details] [diff] [review]: ----------------------------------------------------------------- r+, but to avoid confusion with LICENSE in a non-webrtc.org directory, can we instead do this: // These constants are picked from WebRTC Implementation. Copyright from the same is // given below. LICENSE and AUTHORS can be found in media/webrtc/trunk
Attachment #8602749 - Flags: review?(rjesup) → review+
(In reply to Randell Jesup [:jesup] from comment #3) > r+, but to avoid confusion with LICENSE in a non-webrtc.org directory, can > we instead do this: > > // These constants are picked from WebRTC Implementation. Copyright from the > same is > // given below. LICENSE and AUTHORS can be found in media/webrtc/trunk The trouble with that is that my license scanner knows how to scan a directory and its parents for a file referenced in a header, but it doesn't know how to read English :-| I could teach it a special exception, but that seems overkill for two files. If you would prefer, we could just add the LICENSE text direct to the header of the two files, instead of the current header text. Gerv
Flags: needinfo?(rjesup)
(In reply to Gervase Markham [:gerv] from comment #4) > (In reply to Randell Jesup [:jesup] from comment #3) > > r+, but to avoid confusion with LICENSE in a non-webrtc.org directory, can > > we instead do this: > > > > // These constants are picked from WebRTC Implementation. Copyright from the > > same is > > // given below. LICENSE and AUTHORS can be found in media/webrtc/trunk > > The trouble with that is that my license scanner knows how to scan a > directory and its parents for a file referenced in a header, but it doesn't > know how to read English :-| I could teach it a special exception, but that > seems overkill for two files. We need to get to work on that! We can understand spoken english, after all, with WebSpeech! ;-) > If you would prefer, we could just add the LICENSE text direct to the header > of the two files, instead of the current header text. I think this would be preferable, thanks. r=jesup
Flags: needinfo?(rjesup)
backlog: --- → webRTC+
Attached patch Patch v.2Splinter Review
As requested. Gerv
Attachment #8602749 - Attachment is obsolete: true
Attachment #8607068 - Flags: review?(rjesup)
Attachment #8607068 - Flags: review?(rjesup) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: