Bug 1076906 - Fix license headers for some WebRTC files, and provide LICENSE file. r=rjesup

--HG--
extra : rebase_source : 5a542989c21e0942c98b9eef5eaa1fccde59ca46